Support produto upsert by codigo
